testcases/error/anonymous_identifier_usage.veryl
module anonymous_identifier_usage {
    var _: logic;
}
